--- a/PoCLayer1/PoCLayer1/Pages/Counter.razor
+++ b/PoCLayer1/PoCLayer1/Pages/Counter.razor
@@ -2,12 +2,19 @@
 
 <PageTitle>Counter</PageTitle>
 
-<h1>Counter</h1>
+<AuthorizeView>
+    <NotAuthorized>
+        
+        <h1>NOT AUTHORIZED</h1>
 
-<p role="status">Current count: @currentCount</p>
+        <p role="status">Current count: @currentCount</p>
 
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
-
+        <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+    </NotAuthorized>
+    <Authorized>
+        <h1> AUTHORIZED</h1>
+    </Authorized>
+</AuthorizeView>
 @code {
     private int currentCount = 0;
 
