--- a/PoCLayer1/PoCLayer1/Pages/Login.razor
+++ b/PoCLayer1/PoCLayer1/Pages/Login.razor
@@ -6,7 +6,10 @@
 @inject IAuthService authService
 
 
+<AuthorizeView>
+    <NotAuthorized>
         <h3>Login</h3>
+
 
         <div class="card" style="width: 40rem; border: 0.1rem solid darkblue;">
             <div class="form-group card-body">
@@ -33,8 +36,11 @@
                 </div>
             </div>
         </div>
+    </NotAuthorized>
+    <Authorized><h1> Logged in no need to log in again</h1></Authorized>
+</AuthorizeView>
 
-    <h1> Logged in no need to log in again</h1>
+    <AuthorizeView Policy="Employee">Employee view</AuthorizeView>
 
 
 @code {
