--- a/PoCLayer1/PoCLayer1/Pages/AddEmployee.razor
+++ b/PoCLayer1/PoCLayer1/Pages/AddEmployee.razor
@@ -1,15 +1,15 @@
 ﻿<AuthorizeView Policy="Admin">
-@page "/AddManager"
+@page "/AddEmployee"
 @using PoCLayer1.Model
 @using PoCLayer1.Http
 @using Microsoft.AspNetCore.Components
 @inject NavigationManager navMgr
-@inject IUserHttpClient _userHttpClient
+@inject IEmployeeHttpClient _employeeHttpClient
 
 @* Create MANAGER *@
 <div class="card" style="width: 40rem; border: 0.1rem solid darkblue;">
     <div class="form-group card-body">
-        <h3>Create manager account:</h3>
+        <h3>Create employee account:</h3>
         <br/>
         <div class="row">
             <label>Username:</label>
@@ -58,11 +58,20 @@
                             <div class="col-4">
                                 <label>Phone number:</label>
                                 <div class="col-4">
-                                    <input type="text" placeholder="Enter password" @bind="phone_number"/>
+                                    <input type="text" placeholder="Enter phone number" @bind="phone_number"/>
                                 </div>
                             </div>
                         </div>
         <br/>
+        <div class="row">
+                                    <div class="col-4">
+                                        <label>Address:</label>
+                                        <div class="col-4">
+                                            <input type="text" placeholder="Enter address" @bind="address"/>
+                                        </div>
+                                    </div>
+                                </div>
+                <br/>
 
         <br/>
     <div class="field">
@@ -72,15 +81,15 @@
     </div>
 
         
-        @if (returnedUserFromAdd != null)
+        @if (returnedEmployeeFromAdd != null)
         {
             <div class="field">
                 <label style="color: green">
                     
                     <br/>
                     <h1>Added:</h1>
-                    <a>Login: @returnedUserFromAdd.username</a>
-                    <a>Password: @returnedUserFromAdd.password</a>
+                    <a>Login: @returnedEmployeeFromAdd.username</a>
+                    <a>Password: @returnedEmployeeFromAdd.password</a>
                 </label>
             </div>
             
@@ -88,7 +97,7 @@
 
 @code {
 
-    private User returnedUserFromAdd;
+    private Employee returnedEmployeeFromAdd;
     private string username;
     private string password;
     private string first_name;
@@ -96,12 +105,14 @@
     private string email;
     private string phone_number;
     private long id;
+    private string address;
 
     private async Task addManager()
     {
-        User newUser = new User(default, username, password, first_name, last_name, email, phone_number, "manager");
-        Console.WriteLine("HOME: " + newUser.id);
-        returnedUserFromAdd = await _userHttpClient.AddUserAsync(newUser);
+        //(long id, string username, string password, string firstName, string lastName, string email, string phoneNumber, string authLevel, string address, double hours) 
+        Employee newEmployee = new Employee(default, username, password, first_name, last_name, email, phone_number, "employee", address, 58);
+        Console.WriteLine("HOME: " + newEmployee.id);
+        returnedEmployeeFromAdd = await _employeeHttpClient.AddEmployeeAsync(newEmployee);
         navMgr.NavigateTo("/Home");
     }
 
