--- a/PoCLayer1/PoCLayer1/Shared/NavMenu.razor
+++ b/PoCLayer1/PoCLayer1/Shared/NavMenu.razor
@@ -19,7 +19,7 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> Counter
             </NavLink>
         </div>
-        <AuthorizeView Policy="Admin">
+        <AuthorizeView Roles = "Admin">
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="AddManager">
                     <span class="oi oi-list-rich" aria-hidden="true"></span> Create manager
@@ -27,7 +27,8 @@
             </div>
         </AuthorizeView>
         
-        <AuthorizeView Policy="Admin">
+        <AuthorizeView Roles = "Admin">
+            
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="AddEmployee">
                     <span class="oi oi-list-rich" aria-hidden="true"></span> Create employee
