--- a/PoCLayer1/PoCLayer1/Pages/Login.razor
+++ b/PoCLayer1/PoCLayer1/Pages/Login.razor
@@ -12,7 +12,6 @@
         <h3>Login</h3>
         <div class="card" style="width: 40rem; border: 0.1rem solid darkblue;">
             <div class="form-group card-body">
-                <h3>Post:</h3>
                 <br/>
                 <div class="row">
                     <label>Login:</label>
@@ -36,12 +35,12 @@
             </div>
         </div>
     </NotAuthorized>
-    <Authorized><h1> Logged in no need to log in again</h1></Authorized>
+    <Authorized><h1> Logged in: </h1></Authorized>
 </AuthorizeView>
 
-<AuthorizeView Policy="Employee"><h1>Employee view</h1></AuthorizeView>
-<AuthorizeView Policy="Admin"><h1>Admin view</h1></AuthorizeView>
-<AuthorizeView Policy="Manager"><h1>Manager view</h1></AuthorizeView>
+<AuthorizeView Roles="Employee"><h1>Employee view</h1></AuthorizeView>
+<AuthorizeView Roles="Admin"><h1>Admin view</h1></AuthorizeView>
+<AuthorizeView Roles="Manager"><h1>Manager view</h1></AuthorizeView>
 
 
 @code {
