--- a/PoCLayer1/PoCLayer1/Shared/NavMenu.razor
+++ b/PoCLayer1/PoCLayer1/Shared/NavMenu.razor
@@ -27,7 +27,7 @@
             </div>
         </AuthorizeView>
         
-        <AuthorizeView Roles = "Admin">
+        <AuthorizeView Roles = "Admin, Manager">
             
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="AddEmployee">
@@ -36,10 +36,10 @@
             </div>
         </AuthorizeView>
         
-        <AuthorizeView Policy="Manager">
+        <AuthorizeView Roles="Manager, Admin">
             <div class="nav-item px-3">
-                <NavLink class="nav-link" href="AddEmployee">
-                    <span class="oi oi-list-rich" aria-hidden="true"></span> Create employee
+                <NavLink class="nav-link" href="AddShift">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Add Shift
                 </NavLink>
             </div>
         </AuthorizeView>
