DONE: Shift view added. Started working on DELETE shift implementation.

--- a/PoCLayer1/PoCLayer1/Pages/AddManager.razor
+++ b/PoCLayer1/PoCLayer1/Pages/AddManager.razor
@@ -3,6 +3,7 @@
 @using PoCLayer1.Model
 @using PoCLayer1.Http
 @using Microsoft.AspNetCore.Components
+@using Microsoft.AspNetCore.Mvc
 @inject NavigationManager navMgr
 @inject IUserHttpClient _userHttpClient
 
