--- a/PoCLayer1/PoCLayer1/Shared/NavMenu.razor
+++ b/PoCLayer1/PoCLayer1/Shared/NavMenu.razor
@@ -43,6 +43,14 @@
                 </NavLink>
             </div>
         </AuthorizeView>
+        
+        <AuthorizeView Roles="Manager, Admin">
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="Shifts">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Shifts
+                </NavLink>
+            </div>
+        </AuthorizeView>
 
     </nav>
 </div>
