Me and Simas fixed TestObject class. Added remove shift functionality.

--- a/PoCLayer1/PoCLayer1/Pages/AddShift.razor
+++ b/PoCLayer1/PoCLayer1/Pages/AddShift.razor
@@ -50,7 +50,7 @@
         <div class="col-4">
             <label>People required:</label>
             <div class="col-4">
-                <input type="text" placeholder="Enter required hands" @bind="hands_req"/>
+                <input type="number" placeholder="Enter required hands" @bind="hands_req"/>
             </div>
         </div>
     </div>
