--- a/PoCLayer1/PoCLayer1/Shared/NavMenu.razor
+++ b/PoCLayer1/PoCLayer1/Shared/NavMenu.razor
@@ -51,6 +51,24 @@
                 </NavLink>
             </div>
         </AuthorizeView>
+        
+        <AuthorizeView Roles="Manager, Admin, Employee">
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="ViewUsers">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Users information
+                </NavLink>
+            </div>
+        </AuthorizeView>
+        
+        <AuthorizeView Roles="Manager, Admin, Employee">
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="EmployeeData">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Employee data
+                </NavLink>
+            </div>
+        </AuthorizeView>
+        
+        
 
     </nav>
 </div>
