--- a/PoCLayer1/PoCLayer1/Shared/MainLayout.razor
+++ b/PoCLayer1/PoCLayer1/Shared/MainLayout.razor
@@ -1,6 +1,7 @@
-﻿@inherits LayoutComponentBase
+﻿@using PoCLayer1.Pages
+@inherits LayoutComponentBase
 
-<PageTitle>PoCLayer1</PageTitle>
+<PageTitle>Vikar</PageTitle>
 
 <div class="page">
     <div class="sidebar">
@@ -9,7 +10,7 @@
 
     <main>
         <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+            <LoginButtons/>
         </div>
 
         <article class="content px-4">
