--- a/PoCLayer1/PoCLayer1/Pages/AddEmployee.razor
+++ b/PoCLayer1/PoCLayer1/Pages/AddEmployee.razor
@@ -1,4 +1,4 @@
-﻿<AuthorizeView Roles = "Admin, Manager">
+﻿<AuthorizeView Roles = "Manager">
 
         @page "/AddEmployee"
         @using PoCLayer1.Model
