--- a/PoCLayer1/PoCLayer1/Pages/AddShift.razor
+++ b/PoCLayer1/PoCLayer1/Pages/AddShift.razor
@@ -4,7 +4,7 @@
 @inject NavigationManager navMgr
 @inject IShiftHttpClient _shiftHttpClient
 
-<AuthorizeView Roles = "Admin">
+<AuthorizeView Roles = "Manager">
 @page "/AddShift"
 
 @* AddShift *@
