--- a/PoCLayer1/PoCLayer1/Shared/NavMenu.razor
+++ b/PoCLayer1/PoCLayer1/Shared/NavMenu.razor
@@ -29,7 +29,7 @@
             </div>
         </AuthorizeView>
 
-        <AuthorizeView Roles="Admin, Manager">
+        <AuthorizeView Roles="Manager">
 
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="AddEmployee">
@@ -38,7 +38,7 @@
             </div>
         </AuthorizeView>
 
-        <AuthorizeView Roles="Manager, Admin">
+        <AuthorizeView Roles="Manager">
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="AddShift">
                     <span class="oi oi-list-rich" aria-hidden="true"></span> Add Shift
@@ -46,7 +46,7 @@
             </div>
         </AuthorizeView>
 
-        <AuthorizeView Roles="Manager, Admin">
+        <AuthorizeView Roles="Manager, Employee">
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="Shifts">
                     <span class="oi oi-list-rich" aria-hidden="true"></span> Shifts
@@ -54,7 +54,7 @@
             </div>
         </AuthorizeView>
 
-        <AuthorizeView Roles="Manager, Admin, Employee">
+        <AuthorizeView Roles="Manager, Employee">
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="ViewUsers">
                     <span class="oi oi-list-rich" aria-hidden="true"></span> Users information
@@ -62,7 +62,7 @@
             </div>
         </AuthorizeView>
 
-        <AuthorizeView Roles="Manager, Admin, Employee">
+        <AuthorizeView Roles="Manager">
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="EmployeeData">
                     <span class="oi oi-list-rich" aria-hidden="true"></span> Employee data
