--- a/PoCLayer1/PoCLayer1/Pages/Login.razor
+++ b/PoCLayer1/PoCLayer1/Pages/Login.razor
@@ -1,6 +1,10 @@
-﻿<AuthorizeView>
-    <NotAuthorized>
+﻿@page "/Home"
+@page "/"
 @page "/Login"
+
+<AuthorizeView>
+    <NotAuthorized>
+
 
 @inject NavigationManager navMgr
 @using Authentication
