--- a/PoCLayer1/PoCLayer1/Shared/MainLayout.razor
+++ b/PoCLayer1/PoCLayer1/Shared/MainLayout.razor
@@ -1,7 +1,7 @@
 ﻿@using PoCLayer1.Pages
 @inherits LayoutComponentBase
 
-<PageTitle>Vikar</PageTitle>
+<PageTitle>SAMPS - vikar agency</PageTitle>
 
 <div class="page">
     <div class="sidebar">
