--- a/PoCLayer1/PoCLayer1/Pages/EditUser.razor
+++ b/PoCLayer1/PoCLayer1/Pages/EditUser.razor
@@ -16,35 +16,35 @@
         <div class="form-group field">
             <label>First name:</label>
             <div class="col-1">
-                <InputTextArea type="text" placeholder="Enter information about the shift" @bind-Value="userToEdit.firstName" style="resize: none; text-align: center; max-height: 2.5rem; margin-top: 0.7rem; padding-top: 0.35rem"/>
+                <InputTextArea type="text" placeholder="Enter first name" @bind-Value="userToEdit.firstName" style="resize: none; text-align: center; max-height: 2.5rem; margin-top: 0.7rem; padding-top: 0.35rem"/>
             </div>
         </div>
         
         <div class="form-group field">
             <label>Last name:</label>
             <div class="col-1">
-                <InputTextArea type="text" placeholder="Enter information about the shift" @bind-Value="userToEdit.lastName" style="resize: none; text-align: center; max-height: 2.5rem; margin-top: 0.7rem; padding-top: 0.35rem"/>
+                <InputTextArea type="text" placeholder="Enter last name" @bind-Value="userToEdit.lastName" style="resize: none; text-align: center; max-height: 2.5rem; margin-top: 0.7rem; padding-top: 0.35rem"/>
             </div>
         </div>
         
         <div class="form-group field">
                     <label>Phone number:</label>
             <div class="col-1">
-                <InputTextArea type="text" placeholder="Enter information about the shift" @bind-Value="userToEdit.phoneNumber" style="resize: none; text-align: center; max-height: 2.5rem; margin-top: 0.7rem; padding-top: 0.35rem"/>
+                <InputTextArea type="text" placeholder="Enter phone number" @bind-Value="userToEdit.phoneNumber" style="resize: none; text-align: center; max-height: 2.5rem; margin-top: 0.7rem; padding-top: 0.35rem"/>
                 </div>
             </div>
         
         <div class="form-group field">
             <label>Email:</label>
             <div class="col-1">
-                <InputTextArea type="text" placeholder="Enter information about the shift" @bind-Value="userToEdit.email" style="resize: none; text-align: center; max-height: 2.5rem; margin-top: 0.7rem; padding-top: 0.35rem"/>
+                <InputTextArea type="text" placeholder="Enter Email" @bind-Value="userToEdit.email" style="resize: none; text-align: center; max-height: 2.5rem; margin-top: 0.7rem; padding-top: 0.35rem"/>
                 </div>
             </div>
         
         <div class="form-group field">
             <label>Password:</label>
             <div class="col-1">
-                <InputTextArea type="text" placeholder="Enter information about the shift" @bind-Value="userToEdit.password" style="resize: none; text-align: center; max-height: 2.5rem; margin-top: 0.7rem; padding-top: 0.35rem"/>
+                <InputTextArea type="text" placeholder="Enter password" @bind-Value="userToEdit.password" style="resize: none; text-align: center; max-height: 2.5rem; margin-top: 0.7rem; padding-top: 0.35rem"/>
             </div>
         </div>
 
