--- a/PoCLayer1/PoCLayer1/Pages/EmployeeData.razor
+++ b/PoCLayer1/PoCLayer1/Pages/EmployeeData.razor
@@ -9,31 +9,60 @@
 
 {
     <p>
-    <em>Loading...</em>
-        </p>
+        <em>Loading...</em>
+    </p>
 }
 else if (!employees.Any())
 {
     <p>
-    <em>There are no employees within the system.</em>
+        <em>There are no employees within the system.</em>
     </p>
 }
 else
 {
+    
     <table class="table">
         <thead>
         <tr>
-            <th>User ID</th> <th>Username</th> <th>First name</th> <th>Last name</th> <th>Phone number</th> <th>Hours</th> <th>Address:</th>
+            
+            <AuthorizeView Roles="Manager">
+                <th>User ID</th>
+            </AuthorizeView>
+            
+            <th>First name</th>
+            <th>Last name</th>
+            <th>Phone number</th>
+            <th>Address:</th>
+            
+            <AuthorizeView Roles="Manager">
+                <th>Hours</th>
+            </AuthorizeView>
+
         </tr>
         </thead>
         <tbody>
-        @foreach (var item in employees)
-        {
-            <tr>
-                <td>@item.id</td> <td>@item.username</td> <td>@item.firstName</td> <td>@item.lastName</td> <td>@item.phoneNumber</td> <td>@item.hours</td> <td>@item.address</td>
+        
+        <AuthorizeView Roles="Manager">
+            @foreach (var item in employees)
+            {
+                <tr>
+                    <td>@item.id</td> <td>@item.firstName</td> <td>@item.lastName</td> <td>@item.phoneNumber</td> <td>@item.address</td> <td>@item.hours</td>
 
-            </tr>
-        }
+                </tr>
+            }
+        </AuthorizeView>
+
+        <AuthorizeView Roles="Employee">
+            @foreach (var item in employees)
+            {
+                <tr>
+                    <td>@item.firstName</td> <td>@item.lastName</td> <td>@item.phoneNumber</td> <td>@item.address</td>
+
+                </tr>
+            }
+        </AuthorizeView>
+
+
         </tbody>
     </table> 
 }
