--- a/PoCLayer1/PoCLayer1/Pages/ViewUsers.razor
+++ b/PoCLayer1/PoCLayer1/Pages/ViewUsers.razor
@@ -6,85 +6,142 @@
 @inject IEmployeeHttpClient _iEmployeeHttpClient
 @inject NavigationManager navMgr
 
-<h3>Users: </h3>
 
-@if (users == null)
+    <AuthorizeView Roles="Manager, Admin">
+        <h3>Users: </h3>
+    </AuthorizeView>
 
-{
-    <p>
-    <em>Loading...</em>
+    <AuthorizeView Roles="Employee">
+        <h3>Managers: </h3>
+    </AuthorizeView>
+
+    @if (users == null)
+
+    {
+        <p>
+            <em>Loading...</em>
         </p>
-}
-else if (!users.Any())
-{
-    <p>
-    <em>There are no users within the system.</em>
-    </p>
-}
-else 
-{
-    <table class="table">
-        <thead>
-        <tr>
-            <th>User ID</th> 
-            <th>Username</th> 
-            <th>First name</th> 
-            <th>Last name</th> 
-            <th>Email</th> 
-            <th>Phone number</th> 
-            <AuthorizeView Roles="Manager">
-            <th>Remove</th> 
-            <th>Edit</th>
-            </AuthorizeView>
-        </tr>
-        </thead>
-        <tbody>
-        @foreach (var item in users)
-        {
+    }
+    else if (!users.Any())
+    {
+        <p>
+            <em>There are no users within the system.</em>
+        </p>
+    }
+    else 
+    {
+        <table class="table">
+            <thead>
             <tr>
-                <td>@item.id</td> <td>@item.username</td> <td>@item.firstName</td> <td>@item.lastName</td> <td>@item.email</td> <td>@item.phoneNumber</td>
+                <AuthorizeView Roles="Manager, Admin">
+                    <th>User ID</th>
+                    <th>Username</th>
+                </AuthorizeView>
+            
+                <th>First name</th>
+                <th>Last name</th>
+                <th>Email</th>
+                <th>Phone number</th>
+
+                <AuthorizeView Roles="Manager, Admin">
+                    <th>Remove</th>
+                </AuthorizeView>
+
                 <AuthorizeView Roles="Manager">
-                <td>
-                    @switch (item.authLevel)
-                    {
-                        case "Manager":
-                        {
-                            <label @onclick="@(() => RemoveUser(item.id))" style="cursor:pointer; color: #0000ff; font-weight: bold">
-                                &#x2716;
-                            </label>
-                        } break;
+                    <th>Edit</th>
+                </AuthorizeView>
 
-                        case "Employee":
-                        {
-                            <label @onclick="@(() => RemoveEmployee(item.id))" style="cursor:pointer; color: red; font-weight: bold">
-                                &#x2716;
-                            </label>
-                        } break;
-                    }
-
-                </td>
-                <td>
-                    @switch (item.authLevel)
-                    {
-                        case "Manager" or "Admin":
-                        {
-                            <label @onclick="@(() => EditUser(item.id))" style="cursor:pointer; color: #0000ff; font-weight: bold">
-                                &#128295;
-                            </label>
-                        } break;
-                    }
-                
-                </td>
-               </AuthorizeView>
             </tr>
-        }
-        </tbody>
-    </table> 
-}
-@if (!string.IsNullOrEmpty(errorLabel))
-{
-    <label style="color: red">@errorLabel</label>
-}
+            </thead>
+            <tbody>
+        
+            <AuthorizeView Roles="Manager">
+                @foreach (var item in users)
+                {
+                    <tr>
+                        <td>@item.id</td>
+                        <td>@item.username</td>
+                        <td>@item.firstName</td>
+                        <td>@item.lastName</td>
+                        <td>@item.email</td>
+                        <td>@item.phoneNumber</td>
+            
+
+                        <td>
+                            @switch (item.authLevel)
+                            {
+                                case "Employee":
+                                    <label @onclick="@(() => RemoveEmployee(item.id))" style="cursor:pointer; color: red; font-weight: bold">
+                                        &#x2716;
+                                    </label>
+                                    break;
+                            }
+
+                        </td>
+                  
+                        <td>
+                            @if (item.authLevel.Equals("Employee")) //DONT NEED TO CHECK ANYMORE
+                            {
+                                <label @onclick="@(() => EditEmployee(item.id))" style="cursor:pointer; color: #0000ff; font-weight: bold">
+                                    &#128295;
+                                </label>
+                            }
+                        </td>
+                    </tr>
+                }
+            </AuthorizeView>
+
+
+            <AuthorizeView Roles="Admin">
+                @foreach (var item in users)
+                {
+                    <tr>
+                        @if (item.authLevel.Equals("Manager") || item.authLevel.Equals("Admin"))
+                        {
+                            <td>@item.id</td>
+                            <td>@item.username</td>
+                            <td>@item.firstName</td>
+                            <td>@item.lastName</td>
+                            <td>@item.email</td>
+                            <td>@item.phoneNumber</td>
+
+                            <td>
+                                @if (item.authLevel.Equals("Manager"))
+                                {
+                                    <label @onclick="@(() => RemoveUser(item.id))" style="cursor:pointer; color: #0000ff; font-weight: bold">
+                                        &#x2716;
+                                    </label>
+                                }
+                            </td>
+                        }
+                    </tr>
+                }
+            </AuthorizeView>
+        
+            <AuthorizeView Roles="Employee">
+            
+                @foreach (var item in users)
+                {
+                    @if (item.authLevel.Equals("Manager"))
+                    {
+                        <tr>
+                            <td>@item.firstName</td>
+                            <td>@item.lastName</td>
+                            <td>@item.email</td>
+                            <td>@item.phoneNumber</td>
+                        </tr>
+                    }
+                }
+            </AuthorizeView>
+
+            </tbody>
+        </table> 
+    }
+    @if (!string.IsNullOrEmpty(errorLabel))
+    {
+        <label style="color: red">@errorLabel</label>
+    }
+
 
 @code {
     private ICollection<Employee> employees;
@@ -130,11 +187,11 @@ else
             errorLabel = e.Message;
         }
     }
-    
-    private async Task EditUser(long id)
+
+    private async Task EditEmployee(long id)
     {
         long Id = id;
-        navMgr.NavigateTo($"EditUser/{Id}");
+        navMgr.NavigateTo($"ManagerEditEmployee/{Id}");
     }
     
     
